@@ -53,11 +53,11 @@ setup(name='zope.app.http',
                 'zope.app.file',
                 'zope.app.zcmlfiles']),
       install_requires=['setuptools',
-                        'zope.deprecation',
                         'zope.interface',
                         'zope.publisher>=3.8.0',
                         'zope.container',
                         'zope.filerepresentation',
+                        'zope.app.publisher',  # for browser:defaultView
                         ],
       include_package_data=True,
       zip_safe=False,
